fix logo alignment on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,9 +17,12 @@
     padding-right: 0;
   }
 
+  &__logo-link {
+    align-self: center;
+  }
+
   &__logo {
     height: 28px;
-    align-self: center;
   }
 
   &__nav-list {
